<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="introduce">让每一个人足不出户都能吃上物美价廉的水果</string>
    <string name="category_home">首页</string>
    <string name="category_group_buy">团购</string>
    <string name="category_shopcart">购物袋</string>
    <string name="category_favorite">收藏夹</string>
    <string name="category_mine">我的</string>
    <string name="category_setting">设置</string>
    <string name="home_menu_01">找吃的</string>
    <string name="home_menu_02">找商家</string>
    <string name="home_menu_03">分类</string>
    <string name="home_menu_04">团购</string>
    <string name="home_menu_05">物流</string>
    <string name="search_shop">商家</string>
    <string name="search_goods">商品</string>
    <string name="header_group_text">团购水果</string>
    <string name="header_mine_text">我的APP</string>
    <string name="header_detail_text">商品详情</string>
    <string name="edit_count_dialog_title">修改购买数量</string>
    <string name="pull_to_refresh_pull_label">下拉即可刷新…</string>
    <string name="pull_to_refresh_release_label">松开即可刷新…</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="str_whole_goods_left">全部商品(</string>
    <string name="str_whole_goods_right">)</string>
    <string name="str_total_price_lab">商品总价:</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉即可加载更多\.\.\.</string>
    <string name="pull_to_refresh_from_bottom_release_label">松开即可加载更多\.\.\.</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="shop_icon_desc">This is the icon for shop</string>
    <string name="search_by_goods_hit">输入商品名称</string>
    <string name="search_by_shop_hit">输入商家名称</string>
    <string name="last_update_time">最后更新:</string>
    <string name="search_shop_title">@string/home_menu_02</string>
    <string name="select_by_shop">搜索商家</string>
    <string name="select_by_goods">搜索商品</string>
    <string name="load_text">加载中\.\.\.</string>
    <string name="shangpinliebiao">商品列表</string>
    <string name="more">更多</string>
    <string name="remaishuiguo">热卖水果</string>
    <string name="goods_name_tag">【APP生活】</string>
    <string name="goods_unit">￥</string>
    <string name="sell_unit">/斤</string>
    <string name="fruit_channel">水果频道</string>
    <string name="vegetable_channel">蔬菜频道</string>
    <string name="select_all">全选</string>
    <string name="heji">合计:</string>
    <string name="xiaoji">小计:</string>
    <string name="default_total_price">0.0元</string>
    <string name="jiesuan">结算</string>
    <string name="wodeshouhuodizhi">我的收获地址</string>
    <string name="shouhuodizhi">收货地址管理</string>
    <string name="shouhuodizhibianji">收货地址编辑</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="wodeshoucang">我的收藏</string>
    <string name="wodedingdan">我的订单</string>
    <string name="settings_sw">通用设置</string>
    <string name="str_origin_price">原价:</string>
    <string name="str_delete">删除</string>
    <string name="str_cancel">取消</string>
    <string name="str_confirm">确定</string>
    <string name="str_dingdanhao">订单号:</string>
    <string name="str_dingdanzhuangtai">订单状态</string>
    <string name="str_gengxinshijian">更新时间:</string>
    <string name="str_qsrndzh">请输入您的手机号码</string>
    <string name="str_qsrndmm">请输入您的密码</string>
    <string name="str_qsrndmm_again">请再次输入您的密码</string>
    <string name="str_zhanghao">手机:</string>
    <string name="str_mima">密码:</string>
    <string name="str_zddl">自动登录</string>
    <string name="str_denglu">登录</string>
    <string name="str_zhuce">注册</string>
    <string name="str_yhdl">用户登录</string>
    <string name="str_tjxdz">新增收货地址</string>
    <string name="str_glshdz">管理收货地址</string>
    <string name="str_save">保存</string>
    <string name="str_sjr">收货人姓名</string>
    <string name="str_sjhm">手机号码</string>
    <string name="str_xjdz">详细地址</string>
    <string name="str_szcmrdz">设置为默认地址</string>
    <string name="str_all">全部</string>
    <string name="str_fruit">水果</string>
    <string name="str_vegetable">蔬菜</string>
    <string name="str_fenlei">@string/home_menu_03</string>
    <string name="str_sort">排序</string>
    <string name="str_rygm">人已购买</string>
    <string name="str_qrgm">确认购买</string>
    <string name="str_ljgm">立即购买</string>
    <string name="str_jrgwc">加入购物车</string>
    <string name="str_spms">商品描述</string>
    <string name="str_shoucang">收藏</string>
    <string name="str_yishoucang">已收藏</string>
    <string name="str_psfw">配送范围:</string>
    <string name="str_shr">收货人: </string>
    <string name="str_shdz">收货地址: </string>
    <string name="str_qtjshdz">请添加收货地址</string>
    <string name="str_bzly">备注留言</string>
    <string name="str_wdzh">我的账号</string>
    <string name="str_dzyx">电子邮箱</string>
    <string name="str_xingming">姓名</string>
    <string name="str_xingbie">性别</string>
    <string name="str_birthday">生日</string>
    <string name="str_female">女</string>
    <string name="str_male">男</string>
    <string name="str_logout">注销</string>
    <string name="str_logout_sw">注销用户账户信息</string>
    <string name="str_net_error">网络错误,请稍后再试!</string>
    <string name="str_clean_cache">清除缓存</string>
    <string name="str_clean_cache_sw">包括: 图片 数据等</string>
    <string name="str_check_update">检测更新</string>
    <string name="str_suggestion">意见反馈</string>
    <string name="str_login_empty">用户名或密码不能为空!</string>
    <string name="str_pass_empty">密码不能为空，请输入您的密码！</string>
    <string name="str_pass_error">对不起，密码错误！</string>
    <string name="str_register_password_nomatch">两次输入密码不一致，请重试!</string>
    <string name="str_add2cart_success">已加入购物车</string>
    <string name="str_add2cart_fail">不可以重复添加到购物车!</string>
    <string name="str_add2fav_success">已加入我的收藏</string>
    <string name="str_del_from_fav_success">已从我的收藏中删除</string>
    <string name="str_groupbuy_end_time_tag">团购结束时间:</string>
    <string name="str_yanzhengma">验证码: </string>
    <string name="str_qsryzm">请输入验证码</string>
    <string name="str_qzqsryzm">请正确输入验证码!</string>
    <string name="str_tgsysj">团购剩余时间</string>
    <string name="str_group_price">团购价格</string>
    <string name="jiesuan_success">已下单成功！</string>
    <string name="str_email_error">请输入正确的邮箱地址！</string>
    <string name="str_have_no_address">请添加收货地址！</string>
    <string name="str_limit_error0">对不起！低于起送价格:</string>
    <string name="str_limit_error1">元，请继续选择商品！</string>
    <string name="str_all_order">全部订单</string>
    <string name="str_yxd_order">已下单</string>
    <string name="str_ysl_order">已受理</string>
    <string name="str_psz_order">配送中</string>
    <string name="str_finish_order">已完成</string>
    <string name="str_suozaidiqu">所在地区</string>
    <string name="str_xiangxidizhi">详细地址</string>
    <string name="str_updatedizi_not_exists">地址已经不存在！</string>
    <string name="str_youbian">邮编</string>
    <string name="str_wrong_address_detail">您填写的地址长度超过140字符</string>
    <string name="str_empty_error_address_detail">收货地址不能为空</string>
    <string name="str_wrong_address_name">姓名需要多于2个字符</string>
    <string name="str_empty_error_address_name">收货人姓名不能为空</string>
    <string name="str_wrong_phone">请输入正确的电话号码！</string>
    <string name="str_phone_not_exists">账户不存在！</string>
    <string name="str_empty_error_phone">手机号码不能为空</string>
    <string name="str_wrong_postCode">邮编格式不正确</string>
    <string name="str_shifukuan">实付款:</string>
    <string name="str_tishi">提示</string>
    <string name="str_exit_msg">确定要退出吗？</string>
    <string name="str_clean_cache_msg">确定要清除缓存吗?</string>
	<string name="str_not_login_msg">对不起，您未登录账号，请登陆!</string>
	<string name="str_uuid_timeout">用户名密码过期，您需要重新登录！</string>
	<string name="str_jiesuansuccessheader">购买成功</string>
	<string name="str_jiesuanchenggongMsg">恭喜，您的订单已提交！</string>
	<string name="select_province_header">选择省份</string>
	<string name="select_city_header">选择城市</string>
	<string name="select_region_header">选择区域</string>
	<string name="select_xiaoqu_header">选择小区</string>
	<string name="str_register_shouji">手机:</string>
	<string name="str_phone_already_register">该手机号码已经被注册！</string>
	<string name="str_checkcode_timeout">验证码过期！</string>
	<string name="str_checkcode_error">验证码错误！</string>
	<string name="str_phonenum_error">手机号码错误！</string>
	<string name="str_goods_not_sell">该商品已停售！</string>
	<string name="str_goods_sell_out">该商品已经卖完！</string>
	<string name="str_goods_timeout">该团购商品已经过期！</string>
	<string name="str_goods_not_in_area">该商品不能配送到您的地址！</string>
	<string name="str_submit">提交</string>
	<string name="str_suggest_sbtitle">欢迎您提出宝贵的意见。</string>
	<string name="str_suggest_success">建议发送成功</string>
	<string name="image_tag_desc">This is image tag</string>
</resources>