<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <ScrollView
        style="@style/home_pullToRefresh_style"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:fadingEdge="none"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="8dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginTop="10dip"
                android:background="@drawable/block_bg"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/str_zhanghao"
                    android:textColor="#333333"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/login_user_name"
                    style="@style/input_style"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:hint="@string/str_qsrndzh" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="9" >

                    <ImageButton
                        style="@style/del_input_in_area"
                        android:clickable="true"
                        android:onClick="clearUserName" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginTop="8dip"
                android:background="@drawable/block_bg"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/str_mima"
                    android:textColor="#333333"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/login_user_password"
                    style="@style/input_style"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:hint="@string/str_qsrndmm"
                    android:inputType="textPassword" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="9" >

                    <ImageButton
                        style="@style/del_input_in_area"
                        android:clickable="true"
                        android:onClick="clearPassword" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:orientation="horizontal" >

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/checkbox_no"
                    android:onClick="boolAutoLogin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:gravity="center_vertical"
                    android:text="@string/str_zddl"
                    android:textColor="#666666"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                android:layout_marginTop="15dip"
                android:orientation="horizontal" >

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginRight="4dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_green"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="login"
                    android:text="@string/str_denglu"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="4dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_gray"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="register"
                    android:text="@string/str_zhuce"
                    android:textColor="#333333"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        style="@style/header_style"
        android:background="@drawable/header_bg" >

        <TextView
            android:id="@+id/channel_category"
            style="@style/header_text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/str_yhdl" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <ImageButton
                android:id="@+id/header_back"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/top_back_green_btn"
                android:onClick="softBack"
                android:scaleType="fitXY" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>