<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <FrameLayout
        style="@style/shopcart_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:padding="8dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:layout_marginBottom="50dip"
            android:orientation="vertical" >

            <TextView
                style="@style/goods_originPrice_text_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_suggest_sbtitle"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/suggestion"
                style="@style/green_text"
                android:layout_width="fill_parent"
                android:layout_height="300dip"
                android:layout_marginTop="8dip"
                android:background="#ffffff"
                android:gravity="top"
                android:hint="@string/str_bzly"
                android:lineSpacingExtra="5dip"
                android:padding="8dip"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_gravity="bottom"
            android:gravity="bottom" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:background="@drawable/btn_origin_bg"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="submit"
                android:text="@string/str_submit"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        style="@style/header_style"
        android:background="@drawable/header_bg" >

        <TextView
            style="@style/header_text_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/str_suggestion" />

        <LinearLayout
            android:layout_width="60dip"
            android:layout_height="fill_parent"
            android:background="@drawable/top_back__btn_bg"
            android:gravity="center"
            android:onClick="softBack" >

            <ImageButton
                android:id="@+id/header_back"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_gravity="center_vertical"
                android:background="@drawable/left_arrow"
                android:clickable="false"
                android:scaleType="fitXY" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>