<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:minWidth="280dip"
    android:orientation="vertical"
    android:padding="4dip" >

    <TextView
        android:id="@+id/edit_count_title"
        style="@style/goods_name_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="8dip"
        android:text="@string/edit_count_dialog_title"
        android:textSize="20sp" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dip"
        android:gravity="center" >

        <Button
            android:id="@+id/edit_cout_minus"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/edit_count_minus_btn" />

        <EditText
            android:id="@+id/edit_count_text"
            style="@style/goods_name_text"
            android:layout_width="90dip"
            android:layout_height="35dip"
            android:background="@drawable/input_area1"
            android:gravity="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/edit_cout_plus"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:layout_marginLeft="10dip"
            android:background="@drawable/edit_count_plus_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/edit_count_cancel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="2dip"
            android:layout_weight="1"
            android:background="@drawable/button_gray"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/str_cancel"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/edit_count_confirm"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="2dip"
            android:layout_weight="1"
            android:background="@drawable/btn_origin_bg"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/str_confirm"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>