<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_back"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/searchBtn01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="3"
            android:onClick="showOrHideSelectMode" />

        <AutoCompleteTextView
            android:id="@+id/search_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/edittext_search"
            android:drawableLeft="@drawable/edittext_search_image"
            android:hint="@string/search_by_goods_hit"
            android:imeOptions="actionGo"
            android:paddingLeft="18dip"
            android:singleLine="true"
            android:textSize="14dip" />

        <Button
            android:id="@+id/search_go"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:onClick="search"
            android:text="GO" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <com.fornow.app.utils.pull2refresh.PullToRefreshScrollView
            xmlns:ptr="http://schemas.android.com/apk/res-auto"
            android:id="@+id/pull_refresh_scrollview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fadingEdge="none"
            ptr:ptrAnimationStyle="flip"
            ptr:ptrMode="both" >

            <include layout="@layout/mylist" />
        </com.fornow.app.utils.pull2refresh.PullToRefreshScrollView>

        <LinearLayout
            android:id="@+id/select_mode"
            android:layout_width="150dip"
            android:layout_height="80dip"
            android:background="@drawable/loading_bg"
            android:orientation="vertical" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="selectByGoods"
                android:text="@string/select_by_goods" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="selectByShop"
                android:text="@string/select_by_shop" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>