<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <LinearLayout
        style="@style/shopcart_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="45dip"
            android:background="@drawable/group_buy_sw"
            android:paddingLeft="10dip" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="left"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_whole_goods_left"
                    style="@style/green_text"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cart_total_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/currentPriceColor"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_whole_goods_right"
                    style="@style/green_text"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="50dip"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:gravity="right"
                android:onClick="selectAll"
                android:orientation="horizontal"
                android:paddingRight="10dip" >

                <ImageButton
                    android:id="@+id/cart_select_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:background="@drawable/checkbox_no"
                    android:clickable="false" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="8dip" >

            <com.fornow.app.utils.pull2refresh.PullToRefreshScrollView
                xmlns:ptr="http://schemas.android.com/apk/res-auto"
                android:id="@+id/pull_refresh_scrollview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fadingEdge="none"
                ptr:ptrAnimationStyle="flip"
                ptr:ptrMode="pullFromStart" >

                <include layout="@layout/mylist" />
            </com.fornow.app.utils.pull2refresh.PullToRefreshScrollView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/header_style"
        android:gravity="center" >

        <TextView
            style="@style/header_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_shopcart" />
    </LinearLayout>

</FrameLayout>