<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#00000000"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
        </FrameLayout>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="9"
            android:background="@drawable/footer_bg" >

            <FrameLayout style="@style/main_tab_but_linear" >

                <LinearLayout
                    android:id="@+id/channel1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/footer_left_act_bg"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageView1"
                        style="@style/main_menu_icon"
                        android:src="@drawable/menu_home" />

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/main_menu_text"
                        android:text="@string/category_home" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_channel1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="true"
                    android:orientation="horizontal" >
                </LinearLayout>
            </FrameLayout>

            <FrameLayout style="@style/main_tab_but_linear" >

                <LinearLayout
                    android:id="@+id/channel2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageView2"
                        style="@style/main_menu_icon"
                        android:src="@drawable/menu_group" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/main_menu_text"
                        android:text="@string/category_group_buy" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_channel2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="true"
                    android:orientation="horizontal" >
                </LinearLayout>
            </FrameLayout>

            <FrameLayout style="@style/main_tab_but_linear" >

                <LinearLayout
                    android:id="@+id/channel3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageView3"
                        style="@style/main_menu_icon"
                        android:src="@drawable/menu_cart" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/main_menu_text"
                        android:text="@string/category_shopcart" />
                </LinearLayout>

                <TextView
                    android:id="@+id/cart_conner_mark"
                    style="@style/home_corner_mark"
                    android:layout_width="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/notification_bg"
                    android:gravity="center_vertical|center_horizontal"
                    android:visibility="gone"
                    android:textColor="#ffffff" >
                </TextView>

                <LinearLayout
                    android:id="@+id/btn_channel3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="true"
                    android:orientation="horizontal" >
                </LinearLayout>
            </FrameLayout>

            <FrameLayout style="@style/main_tab_but_linear" >

                <LinearLayout
                    android:id="@+id/channel4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imageView4"
                        style="@style/main_menu_icon"
                        android:src="@drawable/menu_mine" />

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/main_menu_text"
                        android:text="@string/category_mine" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_channel4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="true"
                    android:orientation="horizontal" >
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</TabHost>